login y logout añadido

--- a/src/app/pages/logout/logout.component.html
+++ b/src/app/pages/logout/logout.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <ion-content>
   <p>
-    store works!
+    logout works!
   </p>
 </ion-content>
 <app-footer></app-footer>
