--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Bienvenido {{nombre}}</ion-title>
+    <ion-title>Bienvenido {{usuario}}</ion-title>
   </ion-toolbar>
 </ion-header>
