diferenciacion de rol + mejora diseño añadidos

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -20,7 +20,7 @@
 
   <ion-item lines="none">
     <ion-text color="medium">
-      <a routerLink="/registrar">¿No tienes cuenta? Regístrate aquí</a>
+      <a [routerLink]="['/registrar']">¿No tienes cuenta? Regístrate aquí</a>
     </ion-text>
   </ion-item>
 
