--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,8 +2,12 @@
   <ion-toolbar>
     <div class="pie">
       <p><a [routerLink]="['/']">Home</a></p>
-      <p><a [routerLink]="['/contacto']">Contacto</a></p>
-      @if (usuario) {
+      @if (usuario){
+        @if (usuarioCompleto.rol === 'docente') {
+          <p><a [routerLink]="['/docente']">Docente</a></p>
+        } @else {
+          <p><a [routerLink]="['/alumno']">Alumno</a></p>
+        }
         <p><a [routerLink]="['/logout']">Logout</a></p>
       } @else {
         <p><a [routerLink]="['/login']">Login</a></p>
