--- a/src/app/pages/docente/docente.component.html
+++ b/src/app/pages/docente/docente.component.html
@@ -1,9 +1,23 @@
 <app-header id="header"></app-header>
 <ion-content>
 
-  <p style="text-align: center;">
-    docente works!
-  </p>
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Asignaturas</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+
+  <ion-list>
+    <ion-item *ngFor="let asignatura of asignaturas">
+      <div class="asignatura-container">
+        <div class="asignatura-nombre">
+          {{ asignatura.nombre }} - {{ asignatura.id }}
+        </div>
+      </div>
+      <ion-button fill="outline" class="generar-curre-button">Generar QR</ion-button>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
 <app-footer id="footer"></app-footer>
