--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,9 +1,7 @@
 <app-cabecera id="header"></app-cabecera>
 <ion-content>
-
-  <p style="text-align: center;">
-    asistencia works!
+  <p>
+    inicio works!
   </p>
-
 </ion-content>
 <app-pie id="footer"></app-pie>
