--- a/src/app/pages/alumno/alumno.component.html
+++ b/src/app/pages/alumno/alumno.component.html
@@ -1,23 +1,20 @@
-<app-header id="header"></app-header>
+<app-cabecera id="header"></app-cabecera>
 <ion-content>
-
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Asignaturas</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-toolbar>
+    <h1 style="text-align: center;">Asignaturas</h1>
+  </ion-toolbar>
 
 
-  <ion-list>
-    <ion-item *ngFor="let asignatura of asignaturas">
-      <div class="asignatura-container">
+  <ion-list [inset]="true">
+    <ion-item *ngFor="let asignatura of asignaturas" [button]="true">
+      <div class="asignatura-container" (click)="toggleQRButton(asignatura.id)">
         <div class="asignatura-nombre">
-          {{ asignatura.nombre }} - {{ asignatura.codigo }}
+          {{ asignatura.nombre }} - {{ asignatura.id }}
         </div>
       </div>
-      <ion-button fill="outline" class="escanear-qr-button">Escanear QR</ion-button>
+      <ion-button *ngIf="selectedAsignaturaId === asignatura.id" fill="outline" class="escanear-qr-button">Escanear QR</ion-button>
     </ion-item>
   </ion-list>
 
 </ion-content>
-<app-footer id="footer"></app-footer>
+<app-pie id="footer"></app-pie>
