--- a/src/app/pages/alumno/alumno.component.scss
+++ b/src/app/pages/alumno/alumno.component.scss
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 80%;
+  height: 100%;
 }
 
 .asignatura-nombre {
