--- a/src/app/pages/docente/docente.component.scss
+++ b/src/app/pages/docente/docente.component.scss
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 80%;
+  height: 100%;
 }
 
 .asignatura-nombre {
@@ -14,6 +15,10 @@
   margin-left: 10px;
   --background: #3880ff; /* Color del botón */
   --border-radius: 8px; /* Bordes redondeados */
-  padding: 2em;
+  padding: 2px;
   color: white;
+}
+
+#qr{
+  margin: 0 0 20px 0;
 }
