--- a/src/app/pages/alumno/alumno.component.html
+++ b/src/app/pages/alumno/alumno.component.html
@@ -1,18 +1,17 @@
 <app-cabecera id="header"></app-cabecera>
 <ion-content>
-  <ion-toolbar>
+  <ion-toolbar color="transparent" translucent>
     <h1 style="text-align: center;">Asignaturas</h1>
   </ion-toolbar>
 
 
   <ion-list [inset]="true">
-    <ion-item *ngFor="let asignatura of asignaturas" [button]="true">
-      <div class="asignatura-container" (click)="toggleQRButton(asignatura.id)">
+    <ion-item *ngFor="let asignatura of asignaturas" [button]="true" color="light">
+      <div class="asignatura-container">
         <div class="asignatura-nombre">
           {{ asignatura.nombre }} - {{ asignatura.id }}
         </div>
       </div>
-      <ion-button *ngIf="selectedAsignaturaId === asignatura.id" fill="outline" class="escanear-qr-button">Escanear QR</ion-button>
     </ion-item>
   </ion-list>
 
