--- a/src/app/pages/alumno/alumno.component.scss
+++ b/src/app/pages/alumno/alumno.component.scss
@@ -2,21 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 80%;
+  width: 100%;
   height: 100%;
+  min-width: 80%;
 }
 
 .asignatura-nombre {
   font-size: 16px;
   font-weight: bold;
-}
-
-.escanear-qr-button {
-  margin-left: 10px;
-  --background: #28a745; /* Color del botón */
-  --border-radius: 8px; /* Bordes redondeados */
-}
-
-.escanear-qr-button {
-  color: aliceblue;
 }
