--- a/src/app/pages/docente/docente.component.scss
+++ b/src/app/pages/docente/docente.component.scss
@@ -2,23 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 80%;
+  width: 100%;
   height: 100%;
+  min-width: 80%;
 }
 
 .asignatura-nombre {
   font-size: 16px;
   font-weight: bold;
-}
-
-.generar-curre-button {
-  margin-left: 10px;
-  --background: #3880ff; /* Color del botón */
-  --border-radius: 8px; /* Bordes redondeados */
-  padding: 2px;
-  color: white;
-}
-
-#qr{
-  margin: 0 0 20px 0;
 }
