--- a/src/app/compartido/pie/pie.component.html
+++ b/src/app/compartido/pie/pie.component.html
@@ -4,26 +4,26 @@
       <ion-tab-bar slot="bottom">
         @if (usuario) {
           @if (usuarioCompleto.rol === 'docente') {
-            <ion-tab-button tab="docente" [routerLink]="['/docente']">
+            <ion-tab-button [routerLink]="['/docente']">
               <ion-label>Docente</ion-label>
               <ion-ripple-effect></ion-ripple-effect>
             </ion-tab-button>
           } @else {
-            <ion-tab-button tab="alumno" [routerLink]="['/alumno']">
+            <ion-tab-button [routerLink]="['/alumno']">
               <ion-label>Alumno</ion-label>
               <ion-ripple-effect></ion-ripple-effect>
             </ion-tab-button>
           }
-          <ion-tab-button tab="cerrar-sesion" [routerLink]="['/cerrar-sesion']">
+          <ion-tab-button [routerLink]="['/cerrar-sesion']">
             <ion-label>Cerrar Sesión</ion-label>
             <ion-ripple-effect></ion-ripple-effect>
           </ion-tab-button>
         } @else {
-          <ion-tab-button tab="iniciar-sesion" [routerLink]="['/iniciar-sesion']">
+          <ion-tab-button [routerLink]="['/iniciar-sesion']">
             <ion-label>Iniciar Sesión</ion-label>
             <ion-ripple-effect></ion-ripple-effect>
           </ion-tab-button>
-          <ion-tab-button tab="registrarse" [routerLink]="['/registrarse']">
+          <ion-tab-button [routerLink]="['/registrarse']">
             <ion-label>Registrarse</ion-label>
             <ion-ripple-effect></ion-ripple-effect>
           </ion-tab-button>
