--- a/src/app/pages/alumno/alumno.component.html
+++ b/src/app/pages/alumno/alumno.component.html
@@ -2,6 +2,7 @@
 <ion-content>
   <ion-toolbar color="transparent" translucent>
     <h1 style="text-align: center;">Asignaturas</h1>
+    <p style="text-align: center; margin: 0 20px 0 20px;">presiona una asignatura para escanear el codigo QR</p>
   </ion-toolbar>
 
 
