--- a/src/app/pages/cerrar-sesion/cerrar-sesion.component.html
+++ b/src/app/pages/cerrar-sesion/cerrar-sesion.component.html
@@ -1,7 +1,7 @@
 <app-cabecera id="header"></app-cabecera>
 <ion-content>
-  <p>
-    cerrar-sesion works!
+  <p style="text-align: center;">
+    Sesion cerrada correctamente.
   </p>
 </ion-content>
 <app-pie id="footer"></app-pie>
