--- a/src/app/pages/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/pages/iniciar-sesion/iniciar-sesion.component.html
@@ -1,21 +1,21 @@
 <app-cabecera></app-cabecera>
 <ion-content>
-  @if (isLoading) {
-    <ion-spinner name="bubbles"></ion-spinner>
-  }
+    @if (cargando) {
+      <ion-progress-bar type="indeterminate"></ion-progress-bar>
+    }
 
   <h1 style="text-align: center">Iniciar Sesión</h1>
 
-  <ion-item>
-    <ion-input [(ngModel)]="usuario" type="text" label="Usuario: " labelPlacement="floating" placeholder="Ingrese su usuario"></ion-input>
-  </ion-item>
+  <ion-list [inset]="true">
+    <ion-item color="light">
+      <ion-input [(ngModel)]="usuario" type="text" label="Usuario: " labelPlacement="floating" placeholder="Ingrese su usuario"></ion-input>
+    </ion-item>
+    <ion-item color="light">
+      <ion-input [(ngModel)]="contra" type="password" label="Contraseña: " labelPlacement="floating" placeholder="Ingrese su contraseña"></ion-input>
+    </ion-item>
+  </ion-list>
 
-  <ion-item>
-    <ion-input [(ngModel)]="clave" type="password" label="Contraseña: " labelPlacement="floating" placeholder="Ingrese su contraseña"></ion-input>
-  </ion-item>
-
-  <ion-button (click)="inicioSesion(usuario, clave)" expand="block" fill="clear" shape="round" [disabled]="!usuario || !clave">Iniciar Sesión</ion-button>
-  <ion-text id="loginF" color="danger" *ngIf="loginFailed"><p>Usuario o clave incorrectos.</p></ion-text>
+  <ion-button (click)="inicioSesion(usuario, contra)" expand="block" fill="clear" shape="round" [disabled]="!usuario || !contra">Iniciar Sesión</ion-button>
 
 </ion-content>
 <app-pie></app-pie>
