mejoras en el codigo

--- a/src/app/pages/alumno/alumno.component.html
+++ b/src/app/pages/alumno/alumno.component.html
@@ -8,8 +8,8 @@
 
   <ion-list [inset]="true">
     <ion-item *ngFor="let asignatura of asignaturas" [button]="true" color="light">
-      <div class="asignatura-container">
-        <div class="asignatura-nombre">
+      <div id="container">
+        <div id="nombre">
           {{ asignatura.nombre }} - {{ asignatura.id }}
         </div>
       </div>
