--- a/src/app/pages/docente/docente.component.html
+++ b/src/app/pages/docente/docente.component.html
@@ -2,12 +2,13 @@
 <ion-content>
   <ion-toolbar color="transparent" translucent>
     <h1 style="text-align: center;">Asignaturas</h1>
+    <p style="text-align: center; margin: 0 20px 0 20px;">presiona una asignatura para mostrar el codigo QR</p>
   </ion-toolbar>
 
   <ion-list [inset]="true">
     <ion-item *ngFor="let asignatura of asignaturas" [button]="true" color="light">
-      <div class="asignatura-container" (click)="irMostrarQR(asignatura.id)">
-        <div class="asignatura-nombre">
+      <div id="container" (click)="irMostrarQR(asignatura.id, asignatura.nombre)">
+        <div id="nombre">
           {{ asignatura.nombre }} - {{ asignatura.id }}
         </div>
       </div>
