--- a/src/app/pages/pag-no-encontrada/pag-no-encontrada.component.html
+++ b/src/app/pages/pag-no-encontrada/pag-no-encontrada.component.html
@@ -1,3 +1,7 @@
-<p>
-  pag-no-encontrada works!
-</p>
+<app-cabecera id="header"></app-cabecera>
+<ion-content>
+  <p style="text-align: center;">
+    Pagina no encontrada.
+  </p>
+</ion-content>
+<app-pie id="footer"></app-pie>
