--- a/src/app/pages/mostrar-qr/mostrar-qr.component.html
+++ b/src/app/pages/mostrar-qr/mostrar-qr.component.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 
   <div class="ion-text-center" style="padding: 10px 0 10px 0;">
-    <h5>(Nombre Asignatura) - {{asignaturaId}}</h5>
+    <h5 style="padding: 0 10px 0 10px;">{{asignaturaNombre}} - {{asignaturaId}}</h5>
     <ion-button
           fill="outline"
           class="generar-curre-button"
