--- a/src/app/pages/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/pages/iniciar-sesion/iniciar-sesion.component.html
@@ -8,14 +8,16 @@
 
   <ion-list [inset]="true">
     <ion-item color="light">
-      <ion-input [(ngModel)]="usuario" type="text" label="Usuario: " labelPlacement="floating" placeholder="Ingrese su usuario"></ion-input>
+      <ion-input [(ngModel)]="usuario" type="text" label="Usuario: " labelPlacement="floating" [clearInput]="true" placeholder="Ingrese su usuario"></ion-input>
     </ion-item>
     <ion-item color="light">
-      <ion-input [(ngModel)]="contra" type="password" label="Contraseña: " labelPlacement="floating" placeholder="Ingrese su contraseña"></ion-input>
+      <ion-input [(ngModel)]="contra" type="password" label="Contraseña: " labelPlacement="floating" [clearInput]="true" [clearOnEdit]="false" placeholder="Ingrese su contraseña"></ion-input>
     </ion-item>
   </ion-list>
 
-  <ion-button (click)="inicioSesion(usuario, contra)" expand="block" fill="clear" shape="round" [disabled]="!usuario || !contra">Iniciar Sesión</ion-button>
+  <div class="ion-text-center">
+    <ion-button (click)="inicioSesion(usuario, contra)" size="default" fill="outline" shape="round" [disabled]="!usuario || !contra">Iniciar Sesión</ion-button>
+  </div>
 
 </ion-content>
 <app-pie></app-pie>
