--- a/src/app/pages/registrarse/registrarse.component.html
+++ b/src/app/pages/registrarse/registrarse.component.html
@@ -8,30 +8,32 @@
 
   <ion-list [inset]="true">
     <ion-item color="light">
-      <ion-input [(ngModel)]="usuario" label="Usuario:" labelPlacement="floating" placeholder="Ingrese su usuario" required></ion-input>
+      <ion-input [(ngModel)]="usuario" label="Usuario:" labelPlacement="floating" [clearInput]="true" placeholder="Ingrese su usuario"></ion-input>
     </ion-item>
 
     <ion-item color="light">
-      <ion-input [(ngModel)]="contra" label="Contraseña:" labelPlacement="floating" placeholder="Ingrese su contraseña" type="password" required></ion-input>
+      <ion-input [(ngModel)]="contra" label="Contraseña:" labelPlacement="floating" [clearInput]="true" [clearOnEdit]="false" placeholder="Ingrese su contraseña" type="password"></ion-input>
     </ion-item>
 
     <ion-item color="light">
-      <ion-input [(ngModel)]="nombreCompleto"  label="Nombre Completo:" labelPlacement="floating" placeholder="Ingrese su nombre completo" required></ion-input>
+      <ion-input [(ngModel)]="nombreCompleto"  label="Nombre Completo:" labelPlacement="floating" [clearInput]="true" placeholder="Ingrese su nombre completo"></ion-input>
     </ion-item>
 
     <ion-item color="light">
-      <ion-input [(ngModel)]="telefono"  label="Telefono:" labelPlacement="floating" placeholder="Ingrese su telefono" required></ion-input>
+      <ion-input [(ngModel)]="telefono"  label="Telefono:" labelPlacement="floating" [clearInput]="true" placeholder="Ingrese su telefono"></ion-input>
     </ion-item>
 
     <ion-item color="light">
-      <ion-select [(ngModel)]="rol" label="Rol:" labelPlacement="floating" required>
+      <ion-select [(ngModel)]="rol" label="Rol:" labelPlacement="floating">
         <ion-select-option value="docente" color="light">Docente</ion-select-option>
         <ion-select-option value="alumno">Alumno</ion-select-option>
       </ion-select>
     </ion-item>
   </ion-list>
 
-  <ion-button (click)="registrar()" expand="block" fill="clear" shape="round" [disabled]="!usuario || !contra || !nombreCompleto || !telefono || !rol">Registrarse</ion-button>
+  <div class="ion-text-center">
+    <ion-button (click)="registrar()" fill="outline" shape="round" [disabled]="!usuario || !contra || !nombreCompleto || !telefono || !rol">Registrarse</ion-button>
+  </div>
 
 </ion-content>
 <app-pie></app-pie>
